--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,9 @@ packages = [{include = "agents_core"}, {include = "apps"}, {include = "workers"}
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "^0.104.1"
-uvicorn = {extras = ["standard"], version = "^0.24.0"}
-pydantic-ai = "^0.0.14"
+fastapi = "^0.115.0"
+uvicorn = {extras = ["standard"], version = "^0.35.0"}
+pydantic-ai = "^1.0.2"
 openai = "^1.40.0"
 langfuse = "^2.36.0"
 python-dotenv = "^1.0.0"
@@ -22,6 +22,7 @@ pydantic-settings = "^2.0.3"
 celery = "^5.3.4"
 redis = "^5.0.1"
 pydantic = "^2.5.0"
+griffe = "^1.14.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
